--- a/sections/current_progress/soft_progress.tex
+++ b/sections/current_progress/soft_progress.tex
@@ -1,10 +1,10 @@
 In our project, we focus on developing a visualisation tool
 for \textsc{PureCircuit} instances. 
-In our introduction we referred to three main milestones. As of time of writing
+In our introduction we referred to three main milestones. As of the time of writing,
 we are close to the completion of the first one. We will provide a table of
 objectives that have been achieved, as well as the remaining requirements needed
 to complete the first milestone in \ref{tab:soft:rem-unrem-issues-stage1}. Lastly, we provide a figure
-of our current visualisation in \ref{fig:soft:current-phases}
+of our current visualisation in \ref{fig:soft:current-phases}.
 
 \begin{table}[h!]
     \centering
@@ -16,7 +16,7 @@ of our current visualisation in \ref{fig:soft:current-phases}
             Toggle between value nodes and gate nodes                                  & Specify the type of gate to add                                                                             \\ \hline
             Edge creation functionality. Ensure that edges can only be added between heterogeneous nodes & Add indicators as to how many edges are excess/remaining for the gate to be valid                           \\ \hline  
             Translate position of graph or position of nodes & Inclusion of a status bar as to whether the current assignment is correct, wrong or syntactically incorrect \\  \hline
-            Create panel to show current state as well as some indicator and guides    &   \\ \hline
+            Create panel to show current state as well as some indicators and guides    &   \\ \hline
     \end{tabularx}
     \caption{Finished and remaining issues}\label{tab:soft:rem-unrem-issues-stage1}
 \end{table}
