--- a/sections/main_findings.tex
+++ b/sections/main_findings.tex
@@ -1,4 +1,4 @@
-\subsection{Theory Progress}
+\subsection{Theoretical Progress}
 \input{sections/current_progress/theory_progress}
 
 \subsection{Software Progress}
