--- a/sections/current_progress/theory_progress.tex
+++ b/sections/current_progress/theory_progress.tex
@@ -1,5 +1,5 @@
-This section focuses on the theory progress we made.
-We have experimented with various approaches
+This section focuses on the theoretical progress that has been  made.
+We have experimented with various approaches,
 such as investigating easier variants of \textsc{PureCircuit} to find reductions
 to the \textsc{EndOfLine}. Moreover, we looked into modifying the \textsc{Purify} gate
 or finding a variant where we have more control over the $\bot$ value. We soon
@@ -11,7 +11,7 @@ we looked at a problem by Fearnley et al. \cite{fearnley_UniqueEndPotential_2020
 they introduced a variant fixed-point problems known as \textsc{OPDC}, which is a 
 local descent problem with fixed point topologies. Extending these ideas
 to problems such as \textsc{2D-StrongSperner} and \textsc{3D-StrongSperner},
-which have been studied extensively, lead to the main find of our project in \ref{sect:main-result}.
+which have been studied extensively, lead to the main breakthrough of our project up to this point.
 
 
 % In addition, for the last point, we made several efforts to ensure our problem is
@@ -47,7 +47,7 @@ When referring to the fact that $x$ is a solution, we imply the definition descr
 Additionally we will restrict the solution set of the \textit{Purify} gate of \textsc{PureCircuit}
 to $(0,\bot),(\bot, 1), (0,1), (1, \bot)$. \ref{par:pure-circ-def} explains that this
 does not affect the \textsc{PPAD-hardness} of the problem nor any counting arguments.
-Lastly $\forall b \in \mathbb{B}^n, \bar{b}$ will denote the decimal representation of $b$.
+Lastly given $b \in \mathbb{B}^n$ we will use $\bar{b}$ denote the decimal representation of $b$.
 
 \begin{proof} 
     Given input $(\lambda, 0^m)$, we first construct a colouring function $\Lambda: (\mathbb{B}^{(m+1)})^3 \to \{-1,+1\}^3$ such that:
@@ -56,7 +56,7 @@ $$
 \lambda\left( \left\lfloor  \frac{{\bar{i}+1}}{2}  \right\rfloor, \left\lfloor  \frac{{\bar{j}+1}}{2} \right\rfloor, \left\lfloor  \frac{{\bar{k}+1}}{2} \right\rfloor \right)  \\
 $$
 
-Conversely we can say that we map from our original domain to our new domain as such
+Conversely we can say that we map from our original domain to our new domain as such:
 
 \begin{align}
     g(a, b) &\triangleq \begin{cases}
@@ -66,7 +66,7 @@ Conversely we can say that we map from our original domain to our new domain as 
         \forall  x \in (\mathbb{B}^{m})^3: \lambda(x) &\to \{\Lambda[(g(x_i,b))_{i \in [3]}] \mid b \in \mathbb{B}^{3}\}
 \label{eq:trans-eq}
 \end{align}
-The transformation can be visualised in the figure \ref{fig:main-proof:set_mapping}.
+The transformation can be visualised in figure \ref{fig:main-proof:set_mapping}.
 The reasoning for doubling the dimensions will be explained in the later sections.
 
 \begin{figure}[h!]
@@ -102,12 +102,12 @@ Given that $S$ is the original set of solutions as described in \ref{def:nd-stro
     $$
     N = \Big\{\lambda(\bar{i} + x_i, \bar{j} + x_j, \bar{k} + x_k) \mid x \in \mathbb{B}^3 \Big\}
     $$
-    And therefore the point $(i0, j0,k0)$ is also a solution. We can use the previous neighbourhood argument to prove the converse direction.
+    Therefore the point $(i0, j0,k0)$ is also a solution. We can use the previous neighbourhood argument to prove the converse direction.
 \end{proof}
 We will redefine $m + 1$ as $n$ to keep the notation consistent.
-Given the above we provide a main sketch of our tranformation as such:
+Given the above, we provide the main sketch of our tranformation as such:
 \begin{enumerate}
-    \item \textbf{Input bits}: We initialize input nodes $s_1, s_2, s_3$
+    \item \textbf{Input bits}: We initialise input nodes $s_1, s_2, s_3$
     \item \textbf{Bit generator}: We apply the \textit{Bit Generator gadget} $\hat{P}$ for each $s_i$,
         to create numbers $u^1, u^2, u^3 \in \mathbb{B}^{n}$.  We will use notation $\mathbf{x}[u^i]$ to
         describe the assingment of all nodes in $u^i$.
@@ -116,8 +116,7 @@ $\bar{\Lambda}$ is a 3-bit hazard-free variant of $\Lambda$.
     \item \textbf{Validation}: Copy the results to $s_1, s_2, s_3$
 \end{enumerate}
 The transformation can be summarised in the figure \ref{fig:main-proof:visualisation}.
-The goal of the above transformation is to show that if $\mathbf{x}[o_1] = \mathbf{x}[o_2] = \mathbf{x}[o_3] = \bot$, then we have a solution
-to the original instance.
+The goal of the above transformation is to show that if $\mathbf{x}[o_1] = \mathbf{x}[o_2] = \mathbf{x}[o_3] = \bot$, then we found a panchromatic cube.
 
 \begin{figure}[h!]
     \centering
