--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -1,4 +1,4 @@
-Combinatorics has been a field of study in mathematics that primarily focuses on
+Combinatorics is a field of study in mathematics that primarily focuses on
 the notion of counting objects with certain properties. Over time, this notion
 has shifted, especially in the subfield of algebraic combinatorics, where
 there is no clear notion of the object that we are counting,
@@ -18,7 +18,7 @@ conjecture \cite{ikenmeyer_WhatWhatNot_2022, ikenmeyer_VanishingKroneckerCoeffic
 % \cite{pak_WhatCombinatorialInterpretation_2022, ikenmeyer_WhatWhatNot_2022}. We invest
 In our current work, we focus on extending the work done by
 Ikenmeyer et al. \cite{ikenmeyer_WhatWhatNot_2022}, where they focused on the creation of frameworks
-that determine whether$f \in^? \textsc{\#P}$, by looking
+that determine whether $f \in^? \textsc{\#P}$, by looking
 at the subclasses of $\textsc{\#TFNP - 1}$ problems.
 In our work we focus specifically on the complexity class of $\textsc{PPAD}$, under the lens of $\text{PureCircuit}$,
 due to its circuit-based nature.
