--- a/sections/management.tex
+++ b/sections/management.tex
@@ -60,8 +60,8 @@ A detailed overview of the associated risks and our proposed mitigation strategi
         \textbf{Severity} & \textbf{Probability} & \textbf{Description} & \textbf{Mitigation} & \textbf{Address} \\
         \hhline{|=|=|=|=|=|}
         High   & Medium & Software may not be feasible within the remaining time frame. & We focus on the validation and creation of instances.
-        The current project is primarily research-based, and therefore we are mainly prioritising the theoretical development aspect. & Not yet      \\ \hline
-        Low    & Medium & Software not identifying a correct solution & Usage of TDD techniques and property testing to ensure correctness.  Comparison with handmade instances. & Not yet      \\ \hline
+        The current project is primatoly research-based, and therefore we are mainly prioritising the theoretical development aspect. & Not yet      \\ \hline
+        Low    & Medium & Software not identifying a correct solution. & Usage of TDD techniques and property testing to ensure correctness.  Comparison with handmade instances. & Not yet      \\ \hline
         Medium & Low    & Difficulty of showing the parsimonious reduction between  \textsc{PureCircuit} and  \textsc{nD-StrongSperner}. & Consult with the researchers that actively work on these problems. Lower the requirements
                to polynomially bounded reductions instead. &  Not yet \\ \hline
         High   & High   & Inability to make significant progress on the \textsc{SourceOrExcess} problems or the generalised statement. &
