--- a/sections/next_steps.tex
+++ b/sections/next_steps.tex
@@ -1,8 +1,8 @@
 \subsection{Theory Crafting Next steps}
 
 For the remaining duration, we will focus on three main objectives:
-One will be to demonstrate that the \textit{bipolar} colouring
-of \textsc{nD-StrongSperner} will keep the reduction parsimonious.
+First we want to prove that the statement $\textsc{\#EndOfLine} \subseteq \textsc{\#nD-StrongSperner}$ still
+holds for bipolar colouring.
 Subsequently, we will demonstrate hardness over the \textsc{\#P} class by finding
 reductions from the \textsc{SourceOrExcess} problem due to its separation from $\textsc{\#P}$ as shown in \ref{par:count-ppad}.
 And lastly, we aspire to develop enough gadgets and tools to tackle the core question of the project.
