--- a/sections/appraisals.tex
+++ b/sections/appraisals.tex
@@ -13,9 +13,11 @@ As this is our first research project, we gained many valuable lessons from this
 We quickly realised that such projects require a much more extensive literature review than anticipated, 
 and in general working on multiple problems is more beneficial than focusing on one.
 Moreover, when it comes to theorising and proof development, we faced many failures.
-We understood that we need not only to establish the correctness of the proof, but also to examine its implications and assess whether they are reasonable.
-However, from each failed attempt, we were able to comprehend our problem in greater depth, refining our next steps more effectively.
-Lastly, developed a methodology to research more effectively. We often found it helpful
+We understood that we need to not only establish the correctness of the proof,
+but also to examine its implications and assess whether they are reasonable.
+However, from each failed attempt, we were able to comprehend our problem in greater depth,
+refining our next steps more effectively.
+Lastly, we developed a procedure to research more methodically. We often found it helpful
 to utilise our canvas tools, as seen in \ref{fig:theory:obsidian-canvas}, where
 a bird's-eye approach allowed us to make connections between problems more effectively.
 We hope that the remaining duration of the project will reflect our aforementioned realisations
