--- a/sections/current_progress/soft_progress.tex
+++ b/sections/current_progress/soft_progress.tex
@@ -12,11 +12,10 @@ of our current visualisation in \ref{fig:soft:current-phases}.
             \hline
             \textbf{Accomplished} & \textbf{Remaining} \\
             \hhline{|==|}
-            Ability to add and move nodes                                  & Add values to value nodes                                                                                   \\ \hline
-            Toggle between value nodes and gate nodes                                  & Specify the type of gate to add                                                                             \\ \hline
-            Edge creation functionality. Ensure that edges can only be added between heterogeneous nodes & Add indicators as to how many edges are excess/remaining for the gate to be valid                           \\ \hline  
-            Translate position of graph or position of nodes & Inclusion of a status bar as to whether the current assignment is correct, wrong or syntactically incorrect \\  \hline
-            Create panel to show current state as well as some indicators and guides    &   \\ \hline
+            Ability to add and move nodes  of either type.                                & Add values to value nodes.                                                                                   \\ \hline
+            Edge creation functionality. Ensure that edges can only be added between heterogeneous nodes.                & Specify the type of gate to add.                                                                             \\ \hline
+            Translate the position of graph.  & Add indicators as to how many edges are excess/remaining for the gate to be valid.                           \\ \hline  
+            Create panel to show current state as well as some indicators and guides.  & Inclusion of a status bar as to whether the current assignment is correct, wrong or syntactically incorrect. \\  \hline
     \end{tabularx}
     \caption{Finished and remaining issues}\label{tab:soft:rem-unrem-issues-stage1}
 \end{table}
